Refactored code, by seperating classes into files
This code also contains the ProcessQueue and Scheduler class

--- a/start-OS.html
+++ b/start-OS.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+    <script src="File.js"></script>
+    <script src="Directory.js"></script>
+    <script src="OS.js"></script>
+    <script src="Processes.js"></script>
     <script src="start-OS.js"></script>
   </head>
   <body>
