Added processes to the array.

--- a/start-OS.html
+++ b/start-OS.html
@@ -1,9 +1,16 @@
 <html>
   <head>
+    <script src="Process.js"></script>
     <script src="File.js"></script>
     <script src="Directory.js"></script>
     <script src="OS.js"></script>
     <script src="Processes.js"></script>
+    <script src="BankBookCalculator.js"></script>
+    <script src="ContactManager.js"></script>
+    <script src="SecurityUpdate.js"></script>
+    <script src="RoutesCalculator.js"></script>
+    <script src="VectorCalculator.js"></script>
+    <script src="StatsCalculator.js"></script>
     <script src="start-OS.js"></script>
   </head>
   <body>
