--- a/start-OS.html
+++ b/start-OS.html
@@ -5,12 +5,12 @@
     <script src="Directory.js"></script>
     <script src="OS.js"></script>
     <script src="Processes.js"></script>
-    <script src="BankBookCalculator.js"></script>
-    <script src="ContactManager.js"></script>
-    <script src="SecurityUpdate.js"></script>
-    <script src="RoutesCalculator.js"></script>
-    <script src="VectorCalculator.js"></script>
-    <script src="StatsCalculator.js"></script>
+    <script src="bin/BankBookCalculator.js"></script>
+    <script src="bin/ContactManager.js"></script>
+    <script src="bin/SecurityUpdate.js"></script>
+    <script src="bin/RoutesCalculator.js"></script>
+    <script src="bin/VectorCalculator.js"></script>
+    <script src="bin/StatsCalculator.js"></script>
     <script src="start-OS.js"></script>
   </head>
   <body>
