--- a/playconsole.html
+++ b/playconsole.html
@@ -6,6 +6,7 @@ font-family: "Courier", monospace
 }
 </style>
 <script src = "playconsole.js"></script>
+<script src = "loremipsum.js"></script>
 </head>
 <body>
 <div id="container">
