Refactored, Organized, and Integrated Code
Matt and Alvins code was taken and modularized.

Processes were given names with no spaces.

Device drivers were placed in hash.

--- a/start-OS.html
+++ b/start-OS.html
@@ -5,6 +5,7 @@
     <script src="Directory.js"></script>
     <script src="OS.js"></script>
     <script src="Processes.js"></script>
+    <script src="modules/File_IO.js"></script>
     <script src="bin/BankBookCalculator.js"></script>
     <script src="bin/ContactManager.js"></script>
     <script src="bin/SecurityUpdate.js"></script>
