--- a/CLI.html
+++ b/CLI.html
@@ -1,5 +1,21 @@
 <html>
 <head>
+	<script src="Process.js"></script>
+    <script src="File.js"></script>
+    <script src="Directory.js"></script>
+    <script src="OS.js"></script>
+    <script src="Processes.js"></script>
+    <script src="modules/File_IO.js"></script>
+    <script src="modules/Keyboard.js"></script>
+	<script src="modules/Display.js"></script>
+    <script src="bin/BankBookCalculator.js"></script>
+    <script src="bin/ContactManager.js"></script>
+    <script src="bin/SecurityUpdate.js"></script>
+    <script src="bin/RoutesCalculator.js"></script>
+    <script src="bin/VectorCalculator.js"></script>
+    <script src="bin/StatsCalculator.js"></script>
+    <script src="OS_Worker.js"></script>
+
 <style>
 html *{
 font-family: "Courier", monospace
