--- a/CLI.html
+++ b/CLI.html
@@ -9,7 +9,7 @@
     <script src="modules/Keyboard.js"></script>
 	<script src="modules/Display.js"></script>
     <script src="bin/BankBookCalculator.js"></script>
-    <script src="bin/CommandClear.js"></script>
+    <script src="bin/Commands.js"></script>
     <script src="bin/ContactManager.js"></script>
     <script src="bin/SecurityUpdate.js"></script>
     <script src="bin/RoutesCalculator.js"></script>
