--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <head>
   </head>
   <body>
-    <a href="">Run Assignment One</a>
+    <a href="http://iraleigh.github.io/ABSOLUTELY_MANDATORY_OS/assignment-one/">Run Assignment One</a>
   </body>
 </html>
