--- a/CLI.html
+++ b/CLI.html
@@ -15,7 +15,9 @@
     <script src="bin/RoutesCalculator.js"></script>
     <script src="bin/VectorCalculator.js"></script>
     <script src="bin/StatsCalculator.js"></script>
+    <script src="bin/Delete.js"></script>
     <script src="OS_Worker.js"></script>
+    <script src="AddDummyFiles.js"></script>
 
 <style>
 html *{
