Touch now creates a new file. Does not check if the file is already created.

--- a/CLI.html
+++ b/CLI.html
@@ -10,6 +10,7 @@
 	<script src="modules/Display.js"></script>
     <script src="bin/BankBookCalculator.js"></script>
     <script src="bin/Commands.js"></script>
+    <script src="bin/Touch.js"></script>
     <script src="bin/ContactManager.js"></script>
     <script src="bin/SecurityUpdate.js"></script>
     <script src="bin/RoutesCalculator.js"></script>
