Current progress on CAT

--- a/CLI.html
+++ b/CLI.html
@@ -16,6 +16,7 @@
     <script src="bin/VectorCalculator.js"></script>
     <script src="bin/StatsCalculator.js"></script>
     <script src="bin/Delete.js"></script>
+	<script src="bin/Cat.js"></script>
     <script src="bin/Ls.js"></script>
     <script src="OS_Worker.js"></script>
     <script src="AddDummyFiles.js"></script>
