Potentially finished Cat command.

--- a/CLI.html
+++ b/CLI.html
@@ -28,8 +28,5 @@ font-family: "Courier", monospace
 </style>
 <script src = "CLI.js"></script>
 </head>
-<body>
-<div id="container">
-</div>
-</body>
+<body><span style="white-space: pre-line"><div id="container"></div></span></body>
 </html>
