--- a/CLI.html
+++ b/CLI.html
@@ -18,6 +18,7 @@
     <script src="bin/StatsCalculator.js"></script>
     <script src="bin/Delete.js"></script>
     <script src="bin/Ls.js"></script>
+		<script src="bin/Copy.js"></script>
     <script src="OS_Worker.js"></script>
     <script src="AddDummyFiles.js"></script>
 
