--- a/AMOS.html
+++ b/AMOS.html
@@ -11,6 +11,7 @@
     <script src="bin/BankBookCalculator.js"></script>
     <script src="bin/Touch.js"></script>
     <script src="bin/Clear.js"></script>
+	<script src="bin/Grep.js"></script>
     <script src="bin/ContactManager.js"></script>
     <script src="bin/SecurityUpdate.js"></script>
     <script src="bin/RoutesCalculator.js"></script>
