--- a/AMOS.html
+++ b/AMOS.html
@@ -17,11 +17,13 @@
     <script src="bin/VectorCalculator.js"></script>
     <script src="bin/StatsCalculator.js"></script>
     <script src="bin/Delete.js"></script>
+    <script src="bin/MutexTest.js"></script>
 	<script src="bin/Cat.js"></script>
     <script src="bin/Ls.js"></script>
-		<script src="bin/Copy.js"></script>
+    <script src="bin/Copy.js"></script>
     <script src="OS_Worker.js"></script>
     <script src="AddDummyFiles.js"></script>
+    <script src="MutexObj.js"></script>
 
 <style>
 html *{
