Process that opens multiple threads Each thread counts characters Update the count Put Result in a file

--- a/AMOS.html
+++ b/AMOS.html
@@ -22,6 +22,7 @@
     <script src="bin/Ls.js"></script>
 	<script src="bin/Copy.js"></script>
     <script src="bin/TestingThreads.js"></script>
+    <script src="bin/CharacterCounter.js"></script>
     <script src="OS_Worker.js"></script>
     <script src="AddDummyFiles.js"></script>
 
