Currently trying to launch two processes from 1 CLI command :(

--- a/AMOS.html
+++ b/AMOS.html
@@ -27,6 +27,8 @@
     <script src="bin/Ls.js"></script>
 	<script src="bin/Copy.js"></script>
     <script src="bin/TestingThreads.js"></script>
+    <script src="bin/SleepingFile.js"></script>
+    <script src="bin/ActiveFile.js"></script>
     <script src="OS_Worker.js"></script>
     <script src="AddDummyFiles.js"></script>
     <script src="MutexObj.js"></script>
