Implement Exit properly.

--- a/AMOS.html
+++ b/AMOS.html
@@ -11,6 +11,7 @@
 	<script src="modules/Display.js"></script>
     <script src="bin/BankBookCalculator.js"></script>
     <script src="bin/Touch.js"></script>
+    <script src="bin/Exit.js"></script>
     <script src="bin/Clear.js"></script>
     <script src="bin/Grep.js"></script>
     <script src="bin/Sort.js"></script>
