Added a basic server to the Processes.
The server's main method will take in a counter as the first parameter
and the name of a file to open as the second parameter.

--- a/AMOS.html
+++ b/AMOS.html
@@ -28,6 +28,8 @@
 	<script src="bin/Copy.js"></script>
     <script src="bin/TestingThreads.js"></script>
     <script src="bin/CharacterCounter.js"></script>
+    <script src="bin/Server.js"></script>
+    <script src="bin/TestingServer.js"></script>
     <script src="OS_Worker.js"></script>
     <script src="AddDummyFiles.js"></script>
     <script src="MutexObj.js"></script>
