Changed Scheduler to Oldest First algorithm
The scheduler finds the last accessed Process that is in a Ready
state.

--- a/AMOS.html
+++ b/AMOS.html
@@ -4,6 +4,7 @@
     <script src="File.js"></script>
     <script src="Directory.js"></script>
     <script src="OS.js"></script>
+    <script src="Scheduler.js"></script>
     <script src="Processes.js"></script>
     <script src="Thread.js"></script>
     <script src="modules/File_IO.js"></script>
