--- a/AMOS.html
+++ b/AMOS.html
@@ -30,6 +30,8 @@
 	<script src="bin/Copy.js"></script>
     <script src="bin/TestingThreads.js"></script>
     <script src="bin/CharacterCounter.js"></script>
+    <script src="bin/SleepingFile.js"></script>
+    <script src="bin/ActiveFile.js"></script>
     <script src="OS_Worker.js"></script>
     <script src="AddDummyFiles.js"></script>
     <script src="MutexObj.js"></script>
