--- a/AMOS.html
+++ b/AMOS.html
@@ -6,10 +6,12 @@
     <script src="OS.js"></script>
     <script src="Processes.js"></script>
     <script src="Thread.js"></script>
+	<script src="HelpInfo.js"></script>
     <script src="modules/File_IO.js"></script>
     <script src="modules/Keyboard.js"></script>
 	<script src="modules/Display.js"></script>
     <script src="bin/BankBookCalculator.js"></script>
+	<script src="bin/Man.js"></script>
     <script src="bin/Touch.js"></script>
     <script src="bin/Exit.js"></script>
     <script src="bin/Clear.js"></script>
