--- a/AMOS.html
+++ b/AMOS.html
@@ -44,5 +44,5 @@ font-family: "Courier", monospace
 </style>
 <script src = "CLI.js"></script>
 </head>
-<body><span style="white-space: pre-line"><div id="container"></div></span></body>
+<body><span style="white-space: pre-wrap"><div id="container"></div></span></body>
 </html>
