--- a/AMOS.html
+++ b/AMOS.html
@@ -30,6 +30,11 @@
 	<script src="bin/Copy.js"></script>
     <script src="bin/TestingThreads.js"></script>
     <script src="bin/CharacterCounter.js"></script>
+    <script src="bin/SchedulerProcess1.js"></script>
+    <script src="bin/SchedulerProcess2.js"></script>
+    <script src="bin/SchedulerProcess3.js"></script>
+    <script src="bin/SchedulerProcess4.js"></script>
+    <script src="bin/SchedulerTest.js"></script>
     <script src="OS_Worker.js"></script>
     <script src="AddDummyFiles.js"></script>
     <script src="MutexObj.js"></script>
