--- a/AMOS.html
+++ b/AMOS.html
@@ -1,46 +1,50 @@
 <html>
 <head>
 	<script src="Process.js"></script>
-    <script src="File.js"></script>
-    <script src="Directory.js"></script>
-    <script src="OS.js"></script>
-    <script src="Scheduler.js"></script>
-    <script src="Processes.js"></script>
-    <script src="Thread.js"></script>
-    <script src="modules/File_IO.js"></script>
-    <script src="modules/Keyboard.js"></script>
+	<script src="File.js"></script>
+	<script src="Directory.js"></script>
+	<script src="OS.js"></script>
+	<script src="Scheduler.js"></script>
+	<script src="Processes.js"></script>
+	<script src="Thread.js"></script>
+	<script src="modules/File_IO.js"></script>
+	<script src="modules/Keyboard.js"></script>
 	<script src="modules/Display.js"></script>
-    <script src="bin/BankBookCalculator.js"></script>
-    <script src="bin/Touch.js"></script>
-    <script src="bin/Exit.js"></script>
-    <script src="bin/Clear.js"></script>
-    <script src="bin/Grep.js"></script>
-    <script src="bin/Sort.js"></script>
-    <script src="bin/Save.js"></script>
-    <script src="bin/ContactManager.js"></script>
-    <script src="bin/SecurityUpdate.js"></script>
-    <script src="bin/RoutesCalculator.js"></script>
-    <script src="bin/VectorCalculator.js"></script>
-    <script src="bin/StatsCalculator.js"></script>
-    <script src="bin/Delete.js"></script>
-    <script src="bin/mutexTest.js"></script>
-    <script src="bin/SemaphoreTest.js"></script>
+	<script src="bin/BankBookCalculator.js"></script>
+	<script src="bin/Touch.js"></script>
+	<script src="bin/Exit.js"></script>
+	<script src="bin/Clear.js"></script>
+	<script src="bin/Grep.js"></script>
+	<script src="bin/Sort.js"></script>
+	<script src="bin/Save.js"></script>
+	<script src="bin/ContactManager.js"></script>
+	<script src="bin/SecurityUpdate.js"></script>
+	<script src="bin/RoutesCalculator.js"></script>
+	<script src="bin/VectorCalculator.js"></script>
+	<script src="bin/StatsCalculator.js"></script>
+	<script src="bin/Delete.js"></script>
+	<script src="bin/mutexTest.js"></script>
+	<script src="bin/SemaphoreTest.js"></script>
 	<script src="bin/Cat.js"></script>
-    <script src="bin/Ls.js"></script>
+	<script src="bin/Ls.js"></script>
 	<script src="bin/Copy.js"></script>
-    <script src="bin/TestingThreads.js"></script>
-    <script src="bin/CharacterCounter.js"></script>
-    <script src="OS_Worker.js"></script>
-    <script src="AddDummyFiles.js"></script>
-    <script src="MutexObj.js"></script>
-    <script src="SemaphoreObj.js"></script>
+	<script src="bin/TestingThreads.js"></script>
+	<script src="bin/CharacterCounter.js"></script>
+	<script src="OS_Worker.js"></script>
+	<script src="AddDummyFiles.js"></script>
+	<script src="MutexObj.js"></script>
+	<script src="SemaphoreObj.js"></script>
+	<script src="Dir.js"></script>
+	<script src="bin/mkdir.js"></script>
+	<script src="bin/cd.js"></script>
+	<script src="bin/pwd.js"></script>
 
-<style>
-html *{
-font-family: "Courier", monospace
-}
-</style>
-<script src = "CLI.js"></script>
+	<style>
+	html *{
+		font-family: "Courier", monospace
+	}
+	</style>
+	<script src = "CLI.js"></script>
 </head>
 <body><span style="white-space: pre-line"><div id="container"></div></span></body>
 </html>
