Added link to assignment four

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   	<ul>
   		<li><a href="http://iraleigh.github.io/ABSOLUTELY_MANDATORY_OS/assignment-one/">Run Assignment One</a></li>
   		<li><a href="http://iraleigh.github.io/ABSOLUTELY_MANDATORY_OS/assignment-two/">Run Assignment Two</a></li>
+  		<li><a href="http://iraleigh.github.io/ABSOLUTELY_MANDATORY_OS/assignment-four/">Run Assignment Four</a></li>
   	</ul>
     
   </body>
