Current progress. Need mans for some individual processes and piping commands. Why did save break?

--- a/AMOS.html
+++ b/AMOS.html
@@ -18,6 +18,7 @@
     <script src="bin/Clear.js"></script>
     <script src="bin/Grep.js"></script>
     <script src="bin/Sort.js"></script>
+	<script src="bin/Help.js"</script>
     <script src="bin/Save.js"></script>
     <script src="bin/ContactManager.js"></script>
     <script src="bin/SecurityUpdate.js"></script>
