Starting to move some startup stuff to init_d.js

--- a/AMOS.html
+++ b/AMOS.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<script src="init_d.js"></script>
 	<script src="Process.js"></script>
     <script src="File.js"></script>
     <script src="Directory.js"></script>
@@ -55,5 +56,5 @@ font-family: "Courier", monospace
 </style>
 <script src = "CLI.js"></script>
 </head>
-<body><span style="white-space: pre-wrap"><div id="container"></div></span></body>
+<body><span style="white-space: pre-wrap"><div id="container">Starting Absolutely Mandatory OS...</div></span></body>
 </html>
