Fixed that line break issue.

--- a/AMOS.html
+++ b/AMOS.html
@@ -56,8 +56,6 @@
         }
     </style>
 </head>
-<body><pre>
-    <div style="white-space: pre-wrap" id="container">
-    </div></pre>
+<body><pre><div style="white-space: pre-wrap" id="container"></div></pre>
 </body>
 </html>
