--- a/AMOS.html
+++ b/AMOS.html
@@ -48,6 +48,7 @@
     <script src="bin/SchedulerProcess4.js"></script>
     <script src="bin/SchedulerTest.js"></script>
     <script src="bin/RemainingHDSpace.js"></script>
+    <script src="bin/ConsumeTheDiskSpace.js"></script>
     <script src="OS_Worker.js"></script>
     <script src="MutexObj.js"></script>
     <script src="SemaphoreObj.js"></script>
