Added to the...  -file object  -Amos.html  -CurrentUserObject  -OS switch user method  -Chmod has been started.  -SwitchUser is finished.

--- a/AMOS.html
+++ b/AMOS.html
@@ -49,6 +49,7 @@
     <script src="bin/SchedulerTest.js"></script>
     <script src="bin/RemainingHDSpace.js"></script>
     <script src="bin/ConsumeTheDiskSpace.js"></script>
+    <script src="bin/SwitchUser.js"></script>
     <script src="OS_Worker.js"></script>
     <script src="MutexObj.js"></script>
     <script src="SemaphoreObj.js"></script>
