--- a/AMOS.html
+++ b/AMOS.html
@@ -1,10 +1,11 @@
 <html>
 <head>
+    <script src="CurrentUserObject.js"></script>
+    <script src="UserObject.js"></script>
     <script src="modules/init.d.js"></script>
     <script src="Process.js"></script>
     <script src="File.js"></script>
     <script src="Directory.js"></script>
-    <script src="UserObject.js"></script>
     <script src="OS.js"></script>
     <script src="CLI.js"></script>
     <script src="Scheduler.js"></script>
@@ -16,6 +17,7 @@
     <script src="modules/Keyboard.js"></script>
     <script src="modules/Display.js"></script>
     <script src="bin/BankBookCalculator.js"></script>
+    <script src="bin/Write.js"></script>
     <script src="bin/Man.js"></script>
     <script src="bin/Touch.js"></script>
     <script src="bin/Exit.js"></script>
