--- a/AMOS.html
+++ b/AMOS.html
@@ -17,6 +17,7 @@
     <script src="modules/Keyboard.js"></script>
     <script src="modules/Display.js"></script>
     <script src="bin/BankBookCalculator.js"></script>
+    <script src="bin/Chmod.js"></script>
     <script src="bin/Write.js"></script>
     <script src="bin/Man.js"></script>
     <script src="bin/Touch.js"></script>
