--- a/AMOS.html
+++ b/AMOS.html
@@ -54,6 +54,7 @@
     <script src="bin/RemainingHDSpace.js"></script>
     <script src="bin/ConsumeTheDiskSpace.js"></script>
     <script src="bin/SwitchUser.js"></script>
+    <script src="bin/WhoAmI.js"></script>
     <script src="OS_Worker.js"></script>
     <script src="MutexObj.js"></script>
     <script src="SemaphoreObj.js"></script>
