--- a/AMOS.html
+++ b/AMOS.html
@@ -55,6 +55,7 @@
     <script src="bin/ConsumeTheDiskSpace.js"></script>
     <script src="bin/SwitchUser.js"></script>
     <script src="bin/WhoAmI.js"></script>
+    <script src="bin/FileProcess.js"></script>
     <script src="OS_Worker.js"></script>
     <script src="MutexObj.js"></script>
     <script src="SemaphoreObj.js"></script>
