Initial commit. Created groups file in root directory. Added two files in groups for testing.

--- a/AMOS.html
+++ b/AMOS.html
@@ -12,6 +12,7 @@
     <script src="Processes.js"></script>
     <script src="Thread.js"></script>
     <script src="AddDummyFiles.js"></script>
+    <script src="GroupsFile.js"></script>
     <script src="HelpInfo.js"></script>
     <script src="modules/File_IO.js"></script>
     <script src="modules/Keyboard.js"></script>
