*Added directory permissions support. *Created an ACL object.  The ACL is now attached to all directories, with a set of default permissions.  Respect for ACL permissions will have to be implemented individually in the relevant processes. *Added a manual for chmod. *Modified ls so that it now lists the contents of any path the user specifies.  Default is the current working directory.

--- a/AMOS.html
+++ b/AMOS.html
@@ -67,6 +67,7 @@
     <script src="bin/mkdir.js"></script>
     <script src="bin/cd.js"></script>
     <script src="bin/pwd.js"></script>
+    <script src="acl.js"></script>
     <style>
         html * {
             font-family: "Courier", monospace;
