Adding and removing users to groups is almost done.     -Getting an error when OS.FS.open returns an undefined thingy.

--- a/AMOS.html
+++ b/AMOS.html
@@ -29,6 +29,7 @@
 	<script src="bin/Echo.js"></script>
     <script src="bin/Help.js"></script>
     <script src="bin/Save.js"></script>
+    <script src="bin/modifyGroup.js"></script>
     <script src="bin/ContactManager.js"></script>
     <script src="bin/SecurityUpdate.js"></script>
     <script src="bin/RoutesCalculator.js"></script>
