--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   		<li><a href="http://iraleigh.github.io/ABSOLUTELY_MANDATORY_OS/assignment-one/">Run Assignment One</a></li>
   		<li><a href="http://iraleigh.github.io/ABSOLUTELY_MANDATORY_OS/assignment-two/">Run Assignment Two</a></li>
   		<li><a href="http://iraleigh.github.io/ABSOLUTELY_MANDATORY_OS/assignment-four/">Run Assignment Four</a></li>
-
   		<li><a href="http://iraleigh.github.io/ABSOLUTELY_MANDATORY_OS/assignment-five/">Run Assignment Five</a></li>
+      <li><a href="http://iraleigh.github.io/ABSOLUTELY_MANDATORY_OS/assignment-six/">Run Assignment Six</a></li>
   	</ul>
     
   </body>
